--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,6 +15,9 @@
 			<div class="infor">
 				<ul>
 					<li><a href="#">
+						Hai đứa này lười quá
+					</a></li>
+					<li><a href="#">
 						<button id="button" class="btn-login">Đăng nhập</button>
 					</a></li>
 					<li><a href="../HTML/dangky.html">
