--- a/HTML/index.html
+++ b/HTML/index.html
@@ -114,10 +114,10 @@
 	<div class="popup">
 		<div class="popup-content">
 			<div class="close">+</div>
-			<h1>Dang nhap</h1>
+			<h1>Đăng nhập</h1>
 			<input type="username" id="user" placeholder="Ten dang nhap">
 			<input type="password" id="pass" placeholder="Mat khau">
-			<button class="login" onclick="Login()">Dang nhap</button>
+			<button class="login" onclick="Login()">Đăng nhập</button>
 			<p>Chưa có tài khoản <a href="../HTML/dangky.html">Đăng ký tài khoản</a></p>
 			<!-- <input type="button" value="Dang nhap" class="button"> -->
 		</div>
