--- a/HTML/scratchnc1.html
+++ b/HTML/scratchnc1.html
@@ -1,1 +1,77 @@
-<h1>Khoa hoc can dang nhap</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="../CSS/scratchnc1.css">
+	<link rel="stylesheet" type="text/css" href="">
+	<script src="../JS/script.js"></script>
+</head>
+<body>
+	<div class="containter">
+		<div class="left">
+			<img src="..//IMG/logo3.png" id="logo">
+			</div>
+			<div class="infor">
+				<ul>
+					<li><a href="#">
+						Nguyen Thi Nhu Quynh
+					</a></li>
+					<li><a href="#">
+						<img src="../IMG/user.png" width="50px" height="50px" alt="">
+					</a></li>
+					<li><a href="../HTML/index.html">
+						<button class="btn-register">Đăng xuất</button>
+					</a></li>
+				</ul>
+			</ul>
+		</div>
+	</div>
+    <div class="see-pro" >
+        <div class="course1">
+            <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="../HTML/cb.html"> vao hoc </a>
+            </div>
+        </div>
+        <div class="course2">
+            <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="../HTML/cb.html"> vao hoc </a>
+            </div>
+        </div>
+        <div class="course3">
+        <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="../HTML/cb.html"> vao hoc </a>
+            </div>
+        </div>
+        <div class="course4">
+            <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="../HTML/cb.html"> vao hoc </a>
+            </div>
+        </div>
+        <div class="course5">
+            <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="../HTML/cb.html"> vao hoc </a>
+            </div>
+        </div>
+        <div class="course6">
+            <img src="../IMG/scratch_cb1.jpeg" width="400px" height="250px" alt="">
+            <p class="title">Scratch Co Ban</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> vao hoc </a>
+            </div>
+        </div>
+
+
+    </div>
+</body>
+</html>
